tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:96:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   96 |   map_int_bool_put(&_t5, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:47:51: note: expected ‘int’ but argument is of type ‘char *’
   47 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:97:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   97 |   int m = _t5;
      |           ^~~
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:98:23: error: expected ‘)’ before ‘in’
   98 |   printf("%s\n", (("a" in m)) ? "true" : "false");
      |                   ~   ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:99:23: error: expected ‘)’ before ‘in’
   99 |   printf("%s\n", (("b" in m)) ? "true" : "false");
      |                   ~   ^~~
      |                       )

   1: #include <stdio.h>
